# SideAssist

./: .gitignore  .gitmodules  CMakeLists.txt  cmake_config_build.ps1  deploy_win_vs.ps1
unused/: .gitignore  SideAssist.code-workspace  ideas.md
unused/docs/: plugin.md
unused/schema_proto/: .CMakeLists.txt  core.proto  named_value.proto  package.proto  plugin_action.proto  plugin_common.proto  plugin_keep_alive.proto  plugin_list.proto  plugin_modify.proto  plugin_register.proto  plugin_remote_information.proto  plugin_update.proto  value_constraint.proto
